--- a/values-arc-runners.yaml
+++ b/values-arc-runners.yaml
@@ -1,6 +1,9 @@
 
 ## name of the runner scale set to create.  Defaults to the helm release name
 runnerScaleSetName: "{{.Values.flavor}}-runner-scale-set"
+controllerServiceAccount:
+   namespace: actions
+   name: arc-controller-gha-rs-controller
 template:
   spec:
     initContainers:
