--- a/controller/app-set-controller.yaml
+++ b/controller/app-set-controller.yaml
@@ -25,7 +25,7 @@ spec:
         helm:
           valueFiles:
             - '$my-repo/controller/values-arc-controller.yaml'
-            - '$my-repo/{{valuesFile}}'
+            - '$my-repo/controller/{{valuesFile}}'
       destination:
         server: '{{cluster}}'
         namespace: '{{destinationNamespace}}' 
