--- a/.github/workflows/test-use-runners.yaml
+++ b/.github/workflows/test-use-runners.yaml
@@ -4,7 +4,8 @@ on: workflow_dispatch
 
 jobs:
   test-runner:
-    runs-on: "test-runner-scale-set"
+    runs-on:
+      group: Default
 
     steps:
       - name: Checkout
