--- a/.github/workflows/test-use-runners.yaml
+++ b/.github/workflows/test-use-runners.yaml
@@ -4,9 +4,7 @@ on: workflow_dispatch
 
 jobs:
   test-runner:
-    runs-on:
-      group: Default
-
+    runs-on: test-runner-scale-set
     steps:
       - name: Checkout
         uses: actions/checkout@v2
