--- a/runner/values-teste.yaml
+++ b/runner/values-teste.yaml
@@ -17,6 +17,17 @@ template:
         - name: dind-externals
           mountPath: /home/runner/tmpDir
     containers:
+    - name: runner
+      image: ghcr.io/actions/actions-runner:latest
+      command: ["/home/runner/run.sh"]
+      env:
+        - name: DOCKER_HOST
+          value: unix:///var/run/docker.sock
+      volumeMounts:
+        - name: work
+          mountPath: /home/runner/_work
+        - name: dind-sock
+          mountPath: /var/run
     - name: dind
       image: docker:dind
       args:
